Corrected the action of B on n

--- a/HHn.tex
+++ b/HHn.tex
@@ -1222,7 +1222,7 @@ From the definition of the map $J\colon \g{g}_{2\alpha}\to\operatorname{End}(\g{
 \end{equation*}
 We also note that the action of $B$ on $\g{n}$ satisfies
 \begin{equation*}
-	\ad(B)\vert_{\g{g}_{\alpha}}=\operatorname{Id}_{\g{g}_{\alpha}}, \quad \ad(B)\vert_{\g{g}_{2\alpha}}=2\operatorname{Id}_{\g{g}_{2\alpha}}.
+	\ad(B)\vert_{\g{g}_{\alpha}}=\frac{1}{r}\operatorname{Id}_{\g{g}_{\alpha}}, \quad \ad(B)\vert_{\g{g}_{2\alpha}}=\frac{2}{r}\operatorname{Id}_{\g{g}_{2\alpha}}.
 \end{equation*}
 
 In a similar manner, one can define operators $J_{X}\colon \g{p}\to\g{p}$ for each $X\in\g{g}_{2\alpha}$ by letting $J_{X}=-Q_{\beta^{-1}(X)}$.
@@ -1353,7 +1353,7 @@ We summarize this discussion as follows:
 	The map $J\colon \g{g}_{2\alpha}\to\operatorname{End}(\g{g}_{\alpha})$ satisfies the following identities for $U$, $V\in\g{g}_{\alpha}$ and $X$, $Y\in\g{g}_{2\alpha}$:
 	\begin{equation*}
 		\begin{split}
-			J_{X}U={}&\frac{r}{2}[X,\theta U],\\
+			J_{X}U={}&\frac{r}{2}[X,\theta U<],\\
 			\langle [U,V],X\rangle_{AN}={}&\frac{2}{r}\langle J_{X}U,V\rangle_{AN},\\
 			\langle [U,V],X\rangle_{\g{g}}={}&\frac{2}{r}\langle J_{X}U,V\rangle_{\g{g}}, \\
 			J_{X}J_{Y}+J_{Y}J_{X}={}&-2\langle X,Y\rangle_{AN}\operatorname{Id}_{\g{g}_{\alpha}}=-\langle X,Y\rangle_{\g{g}}\operatorname{Id}_{\g{g}_{\alpha}},\\
