--- a/HHn.tex
+++ b/HHn.tex
@@ -1182,7 +1182,7 @@ This implies that $\g{n}$ becomes a generalized Heisenberg algebra when $r=2$ (s
 
 Let us define the following four vectors in $\g{a}\oplus\g{g}_{2\alpha}$ 
 (note that $\lvert B\rvert_{AN}=\lvert B\rvert_{\g{g}}=1$, 
-$\lvert X_i\rvert_{AN}=1$, but $\lvert X_i\rvert_{\g{g}}=2$):
+$\lvert X_i\rvert_{AN}=1$, but $\lvert X_i\rvert_{\g{g}}=\sqrt{2}$):
 \begin{equation*}
 		B=\frac{1}{r}\left(
 			\begin{array}{cc|c}
