Fix sign in last equation

--- a/HHn.tex
+++ b/HHn.tex
@@ -1256,7 +1256,7 @@ In particular, if $r=2$, \eqref{eq:J-from-theta} coincides with the formula obta
 
 We make the usual identifications $U\equiv u$ and $V\equiv v$.
 Then, we have $[U,[U,\theta V]]\equiv 4\langle u,v\rangle_{\H^{n}}u+4u\Im u^* v-2\lvert u\rvert^2_{\H^n}v$,
-$[U,V]\equiv U^*v-v^*u=2\Im u^*v$,
+$[U,V]\equiv u^*v-v^*u=-2\Im u^*v$,
 $J_{[U,V]}U\equiv 2ru\Im u^*v$,
 $\langle U,V\rangle_{\g{g}}=2r^2\langle u,v\rangle_{\H^n}$,
 and $\lvert u\rvert^2_{\g{g}}=2r^2\lvert u\rvert^2_{\H^n}$.
@@ -1265,7 +1265,7 @@ Combining all these equations yields
 \ad(U)^2(\theta V)=
 \frac{2}{r^2}\langle U,V\rangle_{\g{g}}U
 -\frac{1}{r^2}\lvert U\rvert^2_{\g{g}} V
-+\frac{2}{r}J_{[U,V]}U.
+-\frac{2}{r}J_{[U,V]}U.
 \]
 
 We compute for each nonzero $X\in \g{p}$ the spectrum of the Jacobi operator $R_{X}\colon \g{p}\to \g{p}$ defined by the equation $R_{X}Y=R(Y,X)X$.
