--- a/tex2html.ipynb
+++ b/tex2html.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,10 @@
     "        font-weight: bold;\n",
     "        content: \"Remark. \";\n",
     "    }\n",
+    "    .theorem > p:first-of-type::before {\n",
+    "        font-weight: bold;\n",
+    "        content: \"Theorem. \";\n",
+    "    }\n",
     "    .proposition > p:first-of-type::before {\n",
     "        font-weight: bold;\n",
     "        content: \"Proposition. \";\n",
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,6 +241,10 @@
     "            section = re.match(r'\\\\section\\{(.+?)}', line).group(1)\n",
     "            yield f'<h2>{section}</h2>\\n\\n'\n",
     "            newline = True\n",
+    "        elif line.startswith(r'\\subsection{'):\n",
+    "            section = re.match(r'\\\\subsection\\{(.+?)}', line).group(1)\n",
+    "            yield f'<h3>{section}</h3>\\n\\n'\n",
+    "            newline = True\n",
     "        elif line.startswith(r'\\begin{itemize}'):\n",
     "            yield from _process_list(document, 'itemize')\n",
     "        elif line.startswith(r'\\begin{enumerate}'):\n",
@@ -246,6 +254,10 @@
     "        elif line.startswith(r'\\begin{remark}'):\n",
     "            yield '<div class=\"remark\">\\n'\n",
     "        elif line.startswith(r'\\end{remark}'):\n",
+    "            yield '</div>\\n\\n'\n",
+    "        elif line.startswith(r'\\begin{theorem}'):\n",
+    "            yield '<div class=\"theorem\">\\n'\n",
+    "        elif line.startswith(r'\\end{theorem}'):\n",
     "            yield '</div>\\n\\n'\n",
     "        elif line.startswith(r'\\begin{lemma}'):\n",
     "            yield '<div class=\"lemma\">\\n'\n",
@@ -272,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
